--- a/Traff Manager/Traff Manager/Traff Manager.csproj
+++ b/Traff Manager/Traff Manager/Traff Manager.csproj
@@ -9,4 +9,10 @@
     <ImplicitUsings>enable</ImplicitUsings>
   </PropertyGroup>
 
+  <ItemGroup>
+    <Reference Include="KAutoHelper">
+      <HintPath>..\..\..\..\HowKTeam\KAutoHelper.dll</HintPath>
+    </Reference>
+  </ItemGroup>
+
 </Project>
